--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
       <div class="p-12 z-[2]">
         <div class="w-full flex justify-end z-[40]">
-          <div class="bg-white rounded-[135.17px] h-[47px] w-[191px] z-[40]"></div>
+          <div
+            class="bg-white rounded-[135.17px] h-[47px] w-[191px] z-[40]"
+          ></div>
         </div>
         <header class="relative pt-20 flex z-[10] items-center justify-between">
           <div class="text-2xl font-bold text-purple-600">
@@ -140,12 +142,22 @@
       </div>
     </div>
 
-    <div class="w-full bg-white py-30 flex justify-center items-center relative z-[-30] overflow-hidden">
+    <div
+      class="w-full bg-white py-30 flex justify-center items-center relative z-[-30] overflow-hidden"
+    >
       <div class="animate_container relative z-[-20]">
-          <img id="animatedImage" src="./images/animation_image1.png" class="z-[-10] relative animate_image max-w-full w-[350px]" alt="">
+        <img
+          id="animatedImage"
+          src="./images/animation_image1.png"
+          class="z-[-10] relative animate_image max-w-full w-[350px]"
+          alt=""
+        />
       </div>
-      <div class="text-black font-normal text-[38px] opacity-1 z-[-21] animate-fade-in">
-        Get a bank account & debit card <p class="text-[#1FC6BB]"> in five minutes.</p>
+      <div
+        class="text-black font-normal text-[38px] opacity-1 z-[-21] animate-fade-in"
+      >
+        Get a bank account & debit card
+        <p class="text-[#1FC6BB]">in five minutes.</p>
       </div>
     </div>
 
@@ -315,9 +327,13 @@
     </div>
 
     <div class="w-full bg-black pt-20 flex justify-between">
-      <p class="text-white font-medium text-[55px] lg:text-[84px] text-left">Compare Sable</p>
+      <p class="text-white font-medium text-[55px] lg:text-[84px] text-left">
+        Compare Sable
+      </p>
       <p class="text-white font-medium text-[55px] lg:text-[84px]">.</p>
-      <p class="text-white font-medium text-[55px] lg:text-[84px] text-left">Compare Sable</p>
+      <p class="text-white font-medium text-[55px] lg:text-[84px] text-left">
+        Compare Sable
+      </p>
     </div>
 
     <div class="w-full bg-black px-20 pt-20">
@@ -328,7 +344,9 @@
             <th>
               <div class="flex flex-col items-start">
                 <img src="./images/table_image2.png" class="h-[123px]" alt="" />
-                <p class="mt-4 text-[#10ACA2FF] text-[20px] lg:text-2xl font-normal text-left">
+                <p
+                  class="mt-4 text-[#10ACA2FF] text-[20px] lg:text-2xl font-normal text-left"
+                >
                   Sable Secured <br />Credit & Debit Card
                 </p>
               </div>
@@ -336,7 +354,9 @@
             <th>
               <div class="flex flex-col items-start">
                 <img src="./images/tabel_image1.png" class="h-[123px]" alt="" />
-                <p class="mt-4 text-[#10ACA2FF] text-[20px] lg:text-2xl font-normal text-left">
+                <p
+                  class="mt-4 text-[#10ACA2FF] text-[20px] lg:text-2xl font-normal text-left"
+                >
                   Sable Debit <br />
                   Card
                 </p>
