--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="p-12 z-[2]">
         <div class="w-full flex justify-end z-[40]">
           <div
-            class="bg-white rounded-[135.17px] h-[47px] w-[191px] z-[40]"
-          ></div>
+            class="bg-white flex items-center font-semibold text-xl justify-center rounded-[135.17px] h-[47px] w-[191px] z-[40]"
+          >Juned</div>
         </div>
         <header class="relative pt-20 flex z-[10] items-center justify-between">
           <div class="text-2xl font-bold text-purple-600">
