--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Project</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <style></style>
   </head>
@@ -143,18 +145,20 @@
     </div>
 
     <div
-      class="w-full bg-white py-30 flex justify-center items-center relative z-[-30] overflow-hidden"
+      class="animate_container w-full h-dvh bg-black py-30 relative overflow-hidden"
     >
-      <div class="animate_container relative z-[-20]">
+      <div class="z-[4] animated-image absolute right-[10%] z-[5] bottom-0 h-[75%]" style="width: fit-content;transform: rotate(18deg);">
         <img
           id="animatedImage"
           src="./images/animation_image1.png"
-          class="z-[-10] relative animate_image max-w-full w-[350px]"
+          class="w-[350px]"
+          style="object-fit: cover;"
           alt=""
         />
       </div>
       <div
-        class="text-black font-normal text-[38px] opacity-1 z-[-21] animate-fade-in"
+        class="animate-fade-in text-black font-normal text-[38px] absolute right-[10%] top-[45%]"
+        style="opacity: 0;"
       >
         Get a bank account & debit card
         <p class="text-[#1FC6BB]">in five minutes.</p>
