--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
 
     <div
-      class="animate_container w-full h-dvh bg-black py-30 relative overflow-hidden"
+      class="animate_container w-full h-[800px] bg-black py-30 relative overflow-hidden"
     >
       <div class="z-[4] animated-image absolute right-[10%] z-[5] bottom-0 h-[75%]" style="width: fit-content;transform: rotate(18deg);">
         <img
