--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           phone, and our site FAQs.
         </p>
       </div>
-      <div class="w-1/2 bg-[#EBEBF1ED] px-1 lg:px-20">
+      <div class="w-1/2 bg-[#EBEBF1ED] px-1 lg:px-20" style="pointer-events: none;">
         <div class="vertical-div-container flex">
           <div class="vertical-scroll-parent">
             <div
