--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
     </div>
 
     <div
-      class="animate_container w-full h-[800px] bg-black py-30 relative overflow-hidden"
+      class="animate_container w-full h-[650px] bg-black pb-30 pt-20 relative overflow-hidden"
     >
-      <div class="z-[4] animated-image absolute right-[10%] z-[5] bottom-0 h-[75%]" style="width: fit-content;transform: rotate(18deg);">
+      <div class="z-[4] animated-image absolute right-[8%] z-[5] bottom-0 h-[85%]" style="width: fit-content;transform: rotate(18deg);">
         <img
           id="animatedImage"
           src="./images/animation_image1.png"
@@ -160,8 +160,8 @@
         class="animate-fade-in text-black font-normal text-[38px] absolute right-[10%] top-[45%]"
         style="opacity: 0;"
       >
-        Get a bank account & debit card
-        <p class="text-[#1FC6BB]">in five minutes.</p>
+        Get a bank account & <br> debit card
+        <p class="text-[#1FC6BB] inline">in five minutes.</p>
       </div>
     </div>
 
